--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,30 +1,40 @@
 en:
-  hello: "Hello world"
-  title: SouvenirShop"
-  static_pages:
-    home:
-      hello: "Hello world"
-      title: SouvenirShop"
-      title_web: "FramGia Company"
-      404_page: "404 page"
-      404_a: "404"
-      search: "search"
-      home: "home"
-      product: "product"
-      sale: "sale"
-      contact: "contact"
-      404 Not Found: "404 Not Found"
-      err_not_found: "Sorry, an error has occured, Requested page not found!"
-      Take Me Home: "Take Me Home"
-      Contact Support: "Contact Support"
-      tile image: "rss feed"
-      Quả Cầu Tuyết Thủy Tinh: "Quả Cầu Tuyết Thủy Tinh"
-      Chất liệu thủy tinh, đá nhân tạo: "Chất liệu: thủy tinh, đá nhân tạo"
-      Kích thước 15x10cm: "Kích thước: 15x10cm."
-      Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt: "Thiết kế: có chức năng phát nhạc, trong quả cầu có
-                              ánh kim tạo hiệu ứng đẹp mắt"
-      Sản Phẩm Mới nhất: "Sản Phẩm Mới nhất"
-      Quà Cưới: "Quà Cưới"
-      $20.00: "$20.00"
-      $30.00: "$30.00"
-      Oops: "Oops!"
+    static_pages:
+      home:
+        hello: "Hello world"
+        title: SouvenirShop"
+        title_web: "FramGia Company"
+        404_page: "404 page"
+        404_a: "404"
+        search: "search"
+        home: "home"
+        product: "product"
+        sale: "sale"
+        contact: "contact"
+        not_found: "404 Not Found"
+        Sorry, an error has occured, Requested page not found!: "Sorry, an error has occured, Requested page not found!"
+        oops: "Oops!"
+        take_me_home: "Take Me Home"
+        Contact_support: "Contact Support"
+        err_not_found: "Sorry, an error has occured, Requested page not found!"
+        contact Support: "Contact Support"
+        tile image: "rss feed"
+        Quả Cầu Tuyết Thủy Tinh: "Quả Cầu Tuyết Thủy Tinh"
+        Chất liệu thủy tinh, đá nhân tạo: "Chất liệu: thủy tinh, đá nhân tạo"
+        Kích thước 15x10cm: "Kích thước: 15x10cm."
+        Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt: "Thiết kế: có chức năng phát nhạc, trong quả cầu có
+                                ánh kim tạo hiệu ứng đẹp mắt"
+        Sản Phẩm Mới nhất: "Sản Phẩm Mới nhất"
+        Quà Cưới: "Quà Cưới"
+        $20.00: "$20.00"
+        $30.00: "$30.00"
+        Oops: "Oops!"
+        message_sigin: "Welcome to the Sample App!"
+        the_form_contains: "The form contains"
+        error_request: "Sorry, an error has occured, Requested page not found!"
+        create_my_account: "Create my account"
+        name: "name"
+        error_message: "Invalid email/password combination"
+        sign_up: "Sign up"
+
+
