--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,7 +8,7 @@ en:
         404_a: "404"
         search: "search"
         home: "home"
-        product: "product"
+        product: "Product"
         sale: "sale"
         contact: "contact"
         not_found: "404 Not Found"
@@ -36,5 +36,47 @@ en:
         name: "name"
         error_message: "Invalid email/password combination"
         sign_up: "Sign up"
-
-
+        new_user: "New User ?"
+        title_website: "Ban hang online"
+        delete: "delete"
+        user_all: "User can edit, show and update"
+        create: "Creater a Category"
+        create_categories: "Create a category"
+        create_orrder_detail: "Create orrder detail"
+        create_comment: "Create comment"
+        create_order: "Create order"
+        create_payment_methods: "Create a payment methods"
+        create_transations: "Create Transations "
+        update_transactions: "Update Transations"
+        update_categori: "Update Category"
+        title_admin: "Admin User"
+        user: "User"
+        new_product: "New Product"
+        create_product: "Create Product"
+        title_admin_index: "Admin User"
+        account: "Account"
+        user: "user"
+        profile: "Profile"
+        logout: "Log out"
+        login: "Login"
+        id: "Id"
+        name: "Name"
+        email: "Email"
+        edit: "Edit"
+        delete: "Delete"
+        home: "Home"
+        company: "Company"
+        portfolio: "Portfolio"
+        blog: "Blog"
+        creative_tim: "Creative Tim"
+        footer_container: "made with love for a better web"
+        title_admin_product: "Admin Product"
+        show_product: "Show Product"
+        save_changes: "Save Changes"
+        create_catrgory: "Create Category"
+        new_category: "New Category"
+        category: "Category"
+        admin: "Welcome Admin"
+        contact: "Thong tin lien he"
+        reset_password: "Reset password"
+        forgot_password: "Forgot password"
