--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,5 +38,12 @@ en:
         sign_up: "Sign up"
         new_user: "New User ?"
         title_website: "Ban hang online"
-        delete: "delete"
         user_all: "User can edit, show and update"
+        update_your_profile: "Update your profile"
+        you_sure: "You sure ?"
+        admin: "Admin"
+        payment_method: "Vui long tao moi"
+        user_deleted: "User deleted"
+        delete : "Delete"
+        delete_user_empty: "Not Delete User"
+        confirmation: "Confirmation"
