Admin product and transactions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,3 +40,23 @@ en:
         title_website: "Ban hang online"
         delete: "delete"
         user_all: "User can edit, show and update"
+        id: "Id"
+        name: "Name"
+        price: "Price"
+        comment: "Comment"
+        image: "Image"
+        account: "Account"
+        back: "Back"
+        delete: "Delete"
+        edit: "Edit"
+        delete_message: "Are you sure"
+        admin: "Admin"
+        log_out: "Log out"
+        users: "Users"
+        profile: "Profile"
+        logout: "Log out"
+        login: "Log in"
+        product: "Product"
+        not_product: "Product Empty"
+        update_transactions_empty: "Update transaction Empty"
+        message: "Image should be less than 1MB"
