Admin comment, order, order_tail

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,15 +19,15 @@ en:
         err_not_found: "Sorry, an error has occured, Requested page not found!"
         contact Support: "Contact Support"
         tile image: "rss feed"
-        Quả Cầu Tuyết Thủy Tinh: "Quả Cầu Tuyết Thủy Tinh"
-        Chất liệu thủy tinh, đá nhân tạo: "Chất liệu: thủy tinh, đá nhân tạo"
-        Kích thước 15x10cm: "Kích thước: 15x10cm."
-        Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt: "Thiết kế: có chức năng phát nhạc, trong quả cầu có
-                                ánh kim tạo hiệu ứng đẹp mắt"
+        content: "Quả Cầu Tuyết Thủy Tinh"
+        content1: "Chất liệu: thủy tinh, đá nhân tạo"
+        kich_thuoc: "Kích thước: 15x10cm."
+        content2: "Thiết kế: có chức năng phát nhạc, trong quả cầu có
+            ánh kim tạo hiệu ứng đẹp mắt"
         Sản Phẩm Mới nhất: "Sản Phẩm Mới nhất"
         Quà Cưới: "Quà Cưới"
-        $20.00: "$20.00"
-        $30.00: "$30.00"
+        gia: "$20.00"
+        gia1: "$30.00"
         Oops: "Oops!"
         message_sigin: "Welcome to the Sample App!"
         the_form_contains: "The form contains"
