admin category and acction account

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,3 +40,20 @@ en:
         title_website: "Ban hang online"
         delete: "delete"
         user_all: "User can edit, show and update"
+        users: "Users"
+        profile: "Profile"
+        log_out: "Log out "
+        log_in: "Log in"
+        account: "Account"
+        password_reset: "Password reset has expired"
+        empty_password: "can't be empty"
+        message_password: "Password has been reset."
+        send_email_password: "Email sent with password reset instructions"
+        email_not_fount: "Email address not found"
+        password_reset: "Password reset"
+        content_email: "Welcome to souvenir_shop! Click on the link below to activate your account:"
+        activate: "Activate"
+        title_password: "To reset your password click the link below:"
+        title_password_email: "This link will expire in two hours."
+        content_password: "If you did not request your password to be reset, please ignore this email and
+          your password will stay as it is."
