--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,3 +40,5 @@ en:
         title_website: "Ban hang online"
         delete: "delete"
         user_all: "User can edit, show and update"
+        english: "English"
+        vietnam : "VietNames"
